--- a/public/editor.html
+++ b/public/editor.html
@@ -11,6 +11,13 @@
 
 </head>
 <body>
+    <nav class="navbar">
+        <img src="img/logo.png" class="logo" alt="">
+        <ul class="links-container">
+            <li class="link-item"><a href="/" class="link">home</a></li>
+            <li class="link-item"><a href="/editor" class="link">editor</a></li>
+        </ul>
+    </nav>
 
     <div class="banner">
         <input type="file" accept="image/*" id="banner-upload" hidden>
