--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,8 @@
     <title>Blog : Homepage</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home.css">
 
 </head>
@@ -30,6 +32,7 @@
             <a href="/editor" class="btn">write a blog</a>
         </div>
     </header>
+    <div class="row me-2 ms-2" id="output"></div>
 
     <!-- blog section -->
     <section class="blogs-section">
