--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,7 +21,7 @@
     </div>
 
     <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
+        <img src="img/Blogo2.png" class="logo" alt="">
         <ul class="links-container">
             <li class="link-item"><a href="/" class="link">home</a></li>
             <li class="link-item"><a href="/editor" class="link">editor</a></li>
